# ec-adapter

./: .editorconfig  .flake8  .pre-commit-config.yaml  CLAUDE.md  MEMORY.md  README.md  pyproject.toml  requirements_test.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/ectocontrol_adapter/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  converters.py  coordinator.py  helpers.py  master.py  mixins.py  number.py  pool.py  registers.py  select.py  sensor.py  switch.py
custom_components/ectocontrol_adapter/translations/: en.json  ru.json
docs/: ARCHITECTURE.md  PROTOCOL.md  README.md
tests/: __init__.py  conftest.py  test_converters.py  test_coordinator.py  test_helpers.py  test_master.py  test_pool.py
tests/mocks/: modbus_mock.py
